# cloacalpy

./: README.md  example.clo  pyproject.toml
src/cloacal/: __init__.py  cli.py  format.py  parse.py  parser.py  toml2clo.py  toml_to_clo.py
test/: test_formatter.py  test_parse.py  test_parser.py  test_toml2clo.py  test_toml_to_clo.py
