[project]
name = "cloacal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "petelouise", email = "programmetress@petelouise.beauty" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
cloacal = "cloacal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pyupgrade>=3.19.0",
    "ruff>=0.8.0",
]
